# murmur

./: .gitignore  README.md  murmur.conf  murmur.py  murmur.toml  pyproject.toml  setup.sh
src/murmur/: __init__.py  app.py  audio.py  config.py  inject.py  logger.py  notify.py  transcribe.py
tests/: __init__.py  conftest.py  test_app.py  test_audio.py  test_config.py  test_inject.py  test_logger.py  test_transcribe.py
